# arm-cortex_m3-ucLM3S1165

./: .gitignore  README-ptBR.md  README.md
samples/project_template/: CMakeLists.txt  create_ozone_project.cmake  linker_script.ld  main.c
